--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,18 @@
 
  /*усе про футер*/
  
+.footer-container {
+   display: flex;
+   align-items: center;
+}
  
+
 footer {
-    margin: 0;
-    padding-top: 60px;
-    padding-bottom: 60px;
+   margin: 0;
+   padding-top: 60px;
+   padding-bottom: 60px;
        
-    background-color: $footer-bg-color;
+   background-color: $footer-bg-color;
 }
 
 .address-list {
@@ -19,7 +24,20 @@ footer {
       margin-top: 9px; 
    }
 
-   &__link {
+   &__link  {
+      
+      transition: color $primari-trasition-duration cubic-bezier($cubic-bezier);
+      &:hover,
+      &:focus {
+         color: $accent-color;
+      }
+   }
+
+   &__link--footer-contact {
+      color: $footer-grey-color;
+   }
+
+   &__link--address {
       display: inline-block;
     
       font-size: 14px;
@@ -29,113 +47,102 @@ footer {
 }
 
 
+.footer-social{
 
-    //address-list__item
-    
-    .contact-color-footer {
-    
-    color: $footer-grey-color
-    }
-    
-    .footer-container {
-    display: flex;
-    align-items: center;
-    }
-    
-   
-    .footer-form {
-    display: flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: 0;
-    }
-    
-   .footer-form button[type='submit'] {
-    position: relative;
-    width: 200px;
-    height: 50px;
-    margin-left: 12px;
-    
-    padding-top: 12px;
-    padding-right: 28px;
-    padding-bottom: 8px;
-    padding-left: 29px;
-    
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    text-transform: capitalize;
-    text-align: start;
-    display: inline-block;
-    vertical-align: middle;
-    
-    
-    background: $accent-color;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    
-    cursor: pointer;
-    
-    
-    color: $primari-white-color;
-    
-    transition: background-color 250ms cubic-bezier($cubic-bezier);
-   }
-    
-    .footer-form button[type='submit']:focus,
-    .footer-form button[type='submit']:hover {
-    background-color:#188CE8;
-    }
-    
-    .footer-form button[type='submit']::after{
-    display: block;
-    position: absolute;
-    content: '';
-    background-image: url(../img/svg/send.svg);
-    
-    width: 24px;
-    height: 24px;
-    right: 28px;
-    top: 13px;
-    }
-    
-.footer-form input[type='email'] {
-    margin: 0;
-    width: 358px;
-    height: 50px;
-    background-color: $footer-bg-color;
-    color: $footer-grey-color;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    padding-left: 16px;
-}
-    
-    .footer-form input[type='email']::placeholder {
-    color: $footer-grey-color;
-    }
-    
-
-      //SOCIAL
-
-.footer__link {
-    
-   color: $primari-white-color;
-   background: rgba(255, 255, 255, 0.1);
-}
-
-.footer-social-links {
    margin-left: 70px;
+
+   &__link {
+    
+      color: $primari-white-color;
+      background: rgba(255, 255, 255, 0.1);
+   }
+
+   
 }
        
-.footer-social-links h3,
-.footer-form h3 {
+
+.footer__title {
    color: $primari-white-color;
    font-size: 14px;
    margin-top: 0;
    margin-bottom: 20px;
    text-transform: uppercase;
-       
+         
 }
+
+
+
+
+    
+   
+.footer-form {
+   display: flex;
+   flex-direction: column;
+   margin-left: auto;
+   margin-right: 0;
+
+   &__input {
+
+      margin: 0;
+      width: 358px;
+      height: 50px;
+      background-color: $footer-bg-color;
+      color: $footer-grey-color;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-sizing: border-box;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+      border-radius: 4px;
+      padding-left: 16px;
+
+      &::placeholder {
+         color: $footer-grey-color;
+      }
+   }
+   
+
+   &__button {
+      @extend %primary-button;
+      
+      position: relative;
+
+      margin-left: 12px;
+    
+      padding-top: 12px;
+      padding-right: 28px;
+      padding-bottom: 8px;
+      padding-left: 29px;
+
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.06em;
+      text-transform: capitalize;
+      text-align: start;
+
+
+      
+
+      &::after{
+         display: block;
+         position: absolute;
+         content: '';
+         background-image: url(../img/svg/send.svg);
+         
+         width: 24px;
+         height: 24px;
+         right: 28px;
+         top: 13px;
+      }
+
+      &:focus,
+      &:hover {
+         background-color:$button-focus-color;
+      }
+
+   }
+
+}
+    
+   
+    
+    
   
