--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,11 +10,15 @@ $accent-color: #2196f3;
 $primari-white-color: #ffffff;
 $footer-bg-color: #2f303a;
 $footer-grey-color: rgba(255, 255, 255, 0.6);
+$button-focus-color:#188CE8;
+$secondary-bg-color: #f5f4fa;
+$link-color: #afb1b8;
 
   // шрифти і їхні властивості
-$primari-fonts: 'Roboto', sans-serif;
+$primary-fonts: 'Roboto', sans-serif;
 $secondary-fonts: 'Raleway', sans-serif;
 
  //анімації
 
 $cubic-bezier: 0.4, 0, 0.2, 1;
+$primari-trasition-duration: 250ms;
